update index.html canonical

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="description" content="cheref mehdi portfolio" />
     <meta name="robots" content="index" />
-    <link rel="canonical" href="https://cheref-mehdi.github.io/MyOnePage/" />
+    <link rel="canonical" href="https://cheref-mehdi.github.io/portfolio/" />
 
     <link rel="shortcut icon" href="assets/img/img.png" />
     <title>CHEREF Mehdi portfolio</title>
