--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       type="text/css"
       href="assets/fonts/simple-line-icons.css"
     />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <!-- Slicknav -->
     <link rel="stylesheet" type="text/css" href="assets/css/slicknav.css" />
     <!-- Menu CSS -->
