--- a/index.html
+++ b/index.html
@@ -265,20 +265,12 @@
               <div
                 style="flex: 1; height: 250px; background-color: aquamarine;"
                 id="canvasParent"
-              >
-                <!-- <canvas style="width: auto;" id="my_Canvas"></canvas> -->
+              >                
                 <iframe src="cubeGame/index.html" seamless height="100%" width="100%"></iframe>
               </div>
             </div>
-            <div class="col-md-6 col-lg-6 col-sm-12" style="display: flex;">
-              <div id="contactDiv" class="col-md-6 col-lg-12 col-sm-12"></div>
-  
-            <!--div class="col-md-12">
-              <object
-                style="border:0; height: 450px; width: 100%;"
-                data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34015.943594576835!2d-106.43242624069771!3d31.677719472407432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e75d90e99d597b%3A0x6cd3eb9a9fcd23f1!2sCourtyard+by+Marriott+Ciudad+Juarez!5e0!3m2!1sen!2sbd!4v1533791187584"
-              ></object>
-            </div-->
+            <div class="col-md-6 col-lg-6 col-sm-12" style="display: flex;" >
+              <div id="contactDiv" class="col-md-12 col-lg-12 col-sm-12" style="display: flex;" ></div>            
           </div>
         </div>
       </div>
